# micro_ros_esp_cam

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md
main/: CMakeLists.txt  idf_component.yml  main.c  main.h
main/cam_init/: init.c  init.h
main/network/: init.c  init.h
