idf_component_register(SRCS "stream.c" "main.c"
                    INCLUDE_DIRS "."
"/home/amr0khaled/Arduino/libraries/micro_ros_arduino/src"
"/home/amr0khaled/Arduino/libraries/micro_ros_arduino/src/actionlib_msgs"
"/home/amr0khaled/Arduino/libraries/micro_ros_arduino/src/action_msgs"
"/home/amr0khaled/Arduino/libraries/micro_ros_arduino/src/builtin_interfaces"
"/home/amr0khaled/Arduino/libraries/micro_ros_arduino/src/composition_interfaces"
"/home/amr0khaled/Arduino/libraries/micro_ros_arduino/src/control_msgs"
"/home/amr0khaled/Arduino/libraries/micro_ros_arduino/src/cortex-m0plus"
"/home/amr0khaled/Arduino/libraries/micro_ros_arduino/src/cortex-m3"
"/home/amr0khaled/Arduino/libraries/micro_ros_arduino/src/cortex-m4"
"/home/amr0khaled/Arduino/libraries/micro_ros_arduino/src/cortex-m7"
"/home/amr0khaled/Arduino/libraries/micro_ros_arduino/src/diagnostic_msgs"
"/home/amr0khaled/Arduino/libraries/micro_ros_arduino/src/esp32"
"/home/amr0khaled/Arduino/libraries/micro_ros_arduino/src/example_interfaces"
"/home/amr0khaled/Arduino/libraries/micro_ros_arduino/src/geometry_msgs"
"/home/amr0khaled/Arduino/libraries/micro_ros_arduino/src/imxrt1062"
"/home/amr0khaled/Arduino/libraries/micro_ros_arduino/src/libyaml_vendor"
"/home/amr0khaled/Arduino/libraries/micro_ros_arduino/src/lifecycle_msgs"
"/home/amr0khaled/Arduino/libraries/micro_ros_arduino/src/micro_ros_msgs"
"/home/amr0khaled/Arduino/libraries/micro_ros_arduino/src/micro_ros_utilities"
"/home/amr0khaled/Arduino/libraries/micro_ros_arduino/src/mk20dx256"
"/home/amr0khaled/Arduino/libraries/micro_ros_arduino/src/mk64fx512"
"/home/amr0khaled/Arduino/libraries/micro_ros_arduino/src/mk66fx1m0"
"/home/amr0khaled/Arduino/libraries/micro_ros_arduino/src/nav_msgs"
"/home/amr0khaled/Arduino/libraries/micro_ros_arduino/src/rcl"
"/home/amr0khaled/Arduino/libraries/micro_ros_arduino/src/rcl_action"
"/home/amr0khaled/Arduino/libraries/micro_ros_arduino/src/rclc"
"/home/amr0khaled/Arduino/libraries/micro_ros_arduino/src/rclc_lifecycle"
"/home/amr0khaled/Arduino/libraries/micro_ros_arduino/src/rclc_parameter"
"/home/amr0khaled/Arduino/libraries/micro_ros_arduino/src/rcl_interfaces"
"/home/amr0khaled/Arduino/libraries/micro_ros_arduino/src/rcl_lifecycle"
"/home/amr0khaled/Arduino/libraries/micro_ros_arduino/src/rcl_logging_interface"
"/home/amr0khaled/Arduino/libraries/micro_ros_arduino/src/rcutils"
"/home/amr0khaled/Arduino/libraries/micro_ros_arduino/src/rmw"
"/home/amr0khaled/Arduino/libraries/micro_ros_arduino/src/rmw_microros"
"/home/amr0khaled/Arduino/libraries/micro_ros_arduino/src/rmw_microxrcedds_c"
"/home/amr0khaled/Arduino/libraries/micro_ros_arduino/src/rosgraph_msgs"
"/home/amr0khaled/Arduino/libraries/micro_ros_arduino/src/rosidl_dynamic_typesupport"
"/home/amr0khaled/Arduino/libraries/micro_ros_arduino/src/rosidl_runtime_c"
"/home/amr0khaled/Arduino/libraries/micro_ros_arduino/src/rosidl_typesupport_c"
"/home/amr0khaled/Arduino/libraries/micro_ros_arduino/src/rosidl_typesupport_interface"
"/home/amr0khaled/Arduino/libraries/micro_ros_arduino/src/rosidl_typesupport_introspection_c"
"/home/amr0khaled/Arduino/libraries/micro_ros_arduino/src/rosidl_typesupport_microxrcedds_c"
"/home/amr0khaled/Arduino/libraries/micro_ros_arduino/src/sensor_msgs"
"/home/amr0khaled/Arduino/libraries/micro_ros_arduino/src/service_msgs"
"/home/amr0khaled/Arduino/libraries/micro_ros_arduino/src/shape_msgs"
"/home/amr0khaled/Arduino/libraries/micro_ros_arduino/src/statistics_msgs"
"/home/amr0khaled/Arduino/libraries/micro_ros_arduino/src/std_msgs"
"/home/amr0khaled/Arduino/libraries/micro_ros_arduino/src/std_srvs"
"/home/amr0khaled/Arduino/libraries/micro_ros_arduino/src/stereo_msgs"
"/home/amr0khaled/Arduino/libraries/micro_ros_arduino/src/test_msgs"
"/home/amr0khaled/Arduino/libraries/micro_ros_arduino/src/tf2_msgs"
"/home/amr0khaled/Arduino/libraries/micro_ros_arduino/src/tracetools"
"/home/amr0khaled/Arduino/libraries/micro_ros_arduino/src/trajectory_msgs"
"/home/amr0khaled/Arduino/libraries/micro_ros_arduino/src/type_description_interfaces"
"/home/amr0khaled/Arduino/libraries/micro_ros_arduino/src/ucdr"
"/home/amr0khaled/Arduino/libraries/micro_ros_arduino/src/unique_identifier_msgs"
"/home/amr0khaled/Arduino/libraries/micro_ros_arduino/src/uxr"
"/home/amr0khaled/Arduino/libraries/micro_ros_arduino/src/visualization_msgs"
"/home/amr0khaled/Arduino/libraries/micro_ros_arduino/src/"
"/home/amr0khaled/Arduino/libraries/esp_camera/src"
)